--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -17,19 +17,19 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Run a Terraform init
-        uses: docker://hashicorp/terraform:0.12.24
+        uses: docker://hashicorp/terraform:0.12.26
         with:
           entrypoint: terraform
           args: init
 
       - name: Run a Terraform fmt
-        uses: docker://hashicorp/terraform:0.12.24
+        uses: docker://hashicorp/terraform:0.12.26
         with:
           entrypoint: terraform
-          args: fmt -check=true
+          args: fmt -check=true -recursive -diff
 
       - name: Run a Terraform validate
-        uses: docker://hashicorp/terraform:0.12.24
+        uses: docker://hashicorp/terraform:0.12.26
         env:
           AWS_REGION: eu-west-1
         with:
