--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,24 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
-      - name: Run a Terraform init
-        uses: docker://hashicorp/terraform:0.12.26
+      - uses: hashicorp/setup-terraform@v1
         with:
-          entrypoint: terraform
-          args: init
+          terraform_version: ~0.13.0
 
-      - name: Run a Terraform fmt
-        uses: docker://hashicorp/terraform:0.12.26
-        with:
-          entrypoint: terraform
-          args: fmt -check=true -recursive -diff
-
-      - name: Run a Terraform validate
-        uses: docker://hashicorp/terraform:0.12.26
-        env:
-          AWS_REGION: eu-west-1
-        with:
-          entrypoint: terraform
-          args: validate
+      - run: make
