--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Crash log files
 crash.log
 
+# Ignore Terraform dependency lock file
+.terraform.lock.hcl
+
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
