--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,12 +12,15 @@ jobs:
   validate:
     name: Validate
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        terraform: [ ~0.12.0, ~0.13.0, ~0.14.0 , ~0.15.0 ]
     steps:
       - name: Check out code
         uses: actions/checkout@v2
 
       - uses: hashicorp/setup-terraform@v1.3.2
         with:
-          terraform_version: ~0.14.0
+          terraform_version: ${{ matrix.terraform }}
 
       - run: make
