--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        terraform: [ ~0.13.0, ~0.14.0 , ~0.15.0, ~1.0.0 ]
+        terraform: [ ~0.13.0, ~0.14.0 , ~0.15.0, ~1.0.0, ~1.1.0 ]
     steps:
       - name: Check out code
         uses: actions/checkout@v3
