fix: apply default ECR lifecycle policy if clients do not specify override
in addition disable default policy if custom JSON is specified, see https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/ecr_lifecycle_policy

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,20 +14,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        terraform: [ ~0.13.0, ~0.14.0 , ~0.15.0, ~1.0.0, ~1.1.0 ]
+        terraform: [ ~1.0.0 ]
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ matrix.terraform }}
 
-      - uses: terraform-linters/setup-tflint@v1
+      - uses: terraform-linters/setup-tflint@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
+      - name: check
+        run: |
           tflint --init
           make fmt validate tflint
 
