feat: added pr title validation for automatic release notes

--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: "static analysis"
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   validate:
-    name: Validate
+    name: validate
     runs-on: ubuntu-latest
     strategy:
       matrix:
