chore: allow `refactor` in pr title

--- a/.github/workflows/pr-title.yaml
+++ b/.github/workflows/pr-title.yaml
@@ -22,6 +22,7 @@ jobs:
             docs
             ci
             chore
+            refactor
           requireScope: false
           # Configure additional validation for the subject based on a regex.
           # This example ensures the subject doesn't start with an uppercase character.
