fix(example): complete example can be applied without errors
This is work in progress

--- a/examples/fixtures/context/Dockerfile
+++ b/examples/fixtures/context/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.9-alpine
+FROM python:3.12-alpine
 
 ADD index.html index.html
 ADD server.py server.py
 
-USER app
+#USER app
 EXPOSE 8000
 
 ENTRYPOINT ["python3", "server.py"]
