fix(alb): complete example can be applied without errors (#150)
* fix(example): complete example can be applied without errors

* fix initial apply w/o target

* Fix alb lookup

* fixed ecr login in example

* updated docs

* fixed race conditions and trivy errors

---------

Co-authored-by: Saef Taher <STaher@stroeer.de>

--- a/examples/fixtures/context/Dockerfile
+++ b/examples/fixtures/context/Dockerfile
@@ -1,9 +1,15 @@
-FROM python:3.9-alpine
+FROM python:3.12-alpine
 
-ADD index.html index.html
-ADD server.py server.py
+RUN addgroup -S app && adduser -S app -G app
+WORKDIR /home/app
+
+ADD index.html /home/app/index.html
+ADD server.py /home/app/server.py
+
+RUN chown -R app:app /home/app
 
 USER app
+
 EXPOSE 8000
 
 ENTRYPOINT ["python3", "server.py"]
